--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "akhils-portfolio",
   "version": "0.1.0",
-  "homepage": "https://prabhas9346.github.io/portfolio",
+  "homepage": "https://akhilbhumireddy.github.io/portfolio",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
@@ -14,7 +14,6 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "emailjs": "^4.0.2",
-    "gh-pages": "^3.2.3",
     "react": "^18.0.0",
     "react-chrono": "^2.6.1",
     "react-dom": "^18.0.0",
@@ -30,7 +29,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -49,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
